# streamlit_ai_agent

./: Dockerfile  dockerfile-compose.yml  pyproject.toml  requirements.txt  sentiment.py  streamlit-descriptor.yml
.github/workflows/: main_sentiment-fm.yml
.streamlit/: secrets.toml
streamlit_app/: sentiment.py
